maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: value += is not a member of Int
      turn+=1
          ^PledgeMaze:11: error: value -= is not a member of Int
              turn-=1
                  ^PledgeMaze:16: error: value -= is not a member of Int
                turn-=1
                    ^PledgeMaze:21: error: value -= is not a member of Int
                    turn-=1 ; return turn
                        ^