maze.pledge.PledgeMaze.scala.code
override def run() {
  
    def keepLeftHand(turn:Int):Int ={
      left()
      turn+=1
      if ( ! isFacingWall()) {
        forward() ; return turn
        } else {
    					right()
        			turn-=1
    					if (! isFacingWall()) {
                forward ; return turn
              } else {
                	right()
                turn-=1
                	if (! isFacingWall()) {
                  	forward ; return turn
                	} else {
                  right()
                    turn-=1 ; return turn
                }
              }
            }
			}
  
  	def dirFree(d:Direction):Boolean  = { 
      var dir:Direction = getDirection()
    	setDirection(d)
      if (isFacingWall) {
        setDirection(dir)
        return false
      } else {
        setDirection(dir)
        return true
      }
    }
  var turn:Int=0
  setDirection(Direction.NORTH)
   while (!isOverBaggle()) {
    setDirection(Direction.NORTH)
    if (! isFacingWall()) {forward}
    else { while (! dirFree(Direction.NORTH) && turn!=0)
     turn= keepLeftHand(turn)
    }
  }
  pickupBaggle()
}
